--- a/i3/config
+++ b/i3/config
@@ -12,6 +12,9 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:monospace 8
 
+
+
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -25,44 +28,71 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+#bindsym XF86AudioRaiseVolume exec bash -c '~/.scripts/notify/change-volume up'
+#bindsym XF86AudioLowerVolume exec bash -c '~/.scripts/notify/change-volume down'
+#bindsym XF86AudioMute exec bash -c '~/.scripts/notify/change-volume mute'
+bindsym F10 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym F9 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym F8 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
+#
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 
+
+
 # Gaps settings
-for_window [class="^.*"] border pixel 0
 # smart_gaps on
 
-gaps inner 5
-gaps outer 10
+#gaps inner 15
+#gaps outer 10
 
 # New tiling windows with title bar and borders
-new_window normal 2
+#new_window normal 2
 # # New floating windows with title bar and without borders
-new_float normal 2
+#new_float normal 2
 # # Hide borders on edges
-hide_edge_borders both
+#hide_edge_borders both
 
-for_window [class="^.*"] border pixel 1
-new_window 1pixel
+#for_window [class="^.*"] border pixel 1
+#new_window 1pixel
+#smart_borders on
+#smart_borders no_gaps
+#border_radius 3
+
+
+##### i3-gaps ##############
+for_window [class=".*"] border pixel 0 #*
+#gaps left 300
+##gaps right 100
+gaps inner 20
+#gaps top 100
+#gaps bottom 100
+gaps outer 5
+###gaps horizontal 2
+#
+################## i3-radius #######################
+#smart_borders no
+#smart_borders no_gaps
+#border_radius 0
+client.focused          #073624 #073624 #073624 #073624
+client.focused_inactive  #073624 #073624 #073624 #073624
+client.unfocused         #073624 #073624 #073624 #073624
+client.urgent           #073624 #073624 #073624 #073624
+
+
 
 # start a terminal
-bindsym $mod+Return exec termite
-
 # kill focused window
 bindsym $mod+c kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size8'"
+bindsym $mod+Shift+d exec bash -c '~/.config/rofi/scripts/appsmenu.sh'
+#bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -71,8 +101,8 @@ bindsym $mod+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size8'"
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+i focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -83,8 +113,8 @@ bindsym $mod+Right focus right
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+i move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -160,7 +190,8 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec bash -c '~/.config/rofi/scripts/powermenu.sh'
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -169,16 +200,16 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink width 1 px or 1 ppt
+        bindsym k resize grow height 1 px or 1 ppt
+        bindsym i resize shrink height 1 px or 1 ppt
+        bindsym l resize grow width 1 px or 1 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 1 px or 1 ppt
+        bindsym Down resize grow height 1 px or 1 ppt
+        bindsym Up resize shrink height 1 px or 1 ppt
+        bindsym Right resize grow width 1 px or 1 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -191,21 +222,66 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
-#        mode hide
-#        hidden_state hide
+##	status_command i3status
+##	 colors {
+##        separator #666666
+##        background #222222
+##        statusline #dddddd
+##        focused_workspace #0088CC #0088CC #ffffff
+##        active_workspace #333333 #333333 #ffffff
+##        inactive_workspace #333333 #333333 #888888
+##        urgent_workspace #2f343a #900000 #ffffff
+#					status_command /home/yuuriya/bumblebee-status/usr/bin/bumblebee-status \
+#					-m mpd spacer nic battery brightness pasink datetime\
+#					-p mpd.format={name} \
+#					-t solarized-powerline
+#   
 #}
+bar {
+        colors {
+        background #002b36
+        statusline #eee8d5
+        separator #4b5262
 
-bindsym $mod+Control+h exec termite -e htop
-bindsym $mod+Control+l exec ~/lock.sh
-exec_always feh --bg-fill ~/Desktop/Vlcsnap-2014-07-26-19h39m20s231.webp
+        # colour of border, background, and text
+        focused_workspace       #ffffff #d33684 #d8dee8
+        active_workspace        #ffffff #dddddd #d8dee8
+        inactive_workspace      #ffffff #6c71c4 #d8dee8
+        urgent_workspacei       #ffffff #ebcb8b #2f343f
+    }
+	status_command i3status
+	position top
+}
+
+bindsym $mod+Control+h exec urxvt -e htop
+bindsym $mod+Control+l exec ~/.scripts/lock.sh
 exec_always xfce4-power-manager
-exec_always pavucontol
-exec_always ibus-daemon
-bindsym Print exec scrot 'SS_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
+bindsym Print exec ~/.scripts/shot-now
+bindsym Shift+Print exec ~/.scripts/shot-seldraw
+bindsym Control+Print exec ~/.scripts/shot-timer
 exec_always picom
 bindsym $mod+Shift+w exec firefox
-bindsym $mod+Shift+f exec termite -e ranger
-bindsym $mod+Shift+m exec termite -e ncmpcp
-bindsym $mod+Shift+v exec termite -e vim
-exec_always ~/.config/polybar/launch.sh
+bindsym $mod+Shift+f exec urxvt -e ranger
+bindsym $mod+Shift+v exec urxvt -e vim
+#exec_always ~/.config/polybar/launch.sh
+#exec_always tint2 -c ~/dotfiles/.config/tint2/mechanical-horizontal.tint2rc
+#exec_always ~/.scripts/randombg.sh
+#exec_always feh --bg-fill ~/akb48/wallpaper2you_251390.jpg
+exec_always feh --bg-fill ~/Documents/492167.jpg
+#exec_always feh --bg-fill ~/Downloads/492167.jpg
+#exec_always ~/kelon-kelonan/feh-blur-wallpaper/feh-blur -b 4 -d
 exec_always mpd
+bindsym $mod+Shift+n exec networkmanager_dmenu &
+exec urxvt -e ~/.scripts/startup.sh
+bindsym $mod+Return exec urxvt -g 64x16
+bindsym $mod+Ctrl+Return exec uxterm
+bindsym $mod+Shift+Return exec urxvt
+exec bash -c ~/.ncmpcpp/scripts/track-change-detector
+exec --no-startup-id  $HOME/.config/i3/i3-master-stack/i3_master
+# swap to master node
+bindsym $mod+m nop swap master
+# go to master node
+bindsym $mod+shift+m nop go master
+# enable/disable master layout in current workspace
+bindsym $mod+alt+m nop master toggle
+
